crates/pandaspy-discovery/tests/snapshots/ssdp_golden__every_ssdp_fixture_parses_and_matches_its_snapshot@synthetic-not-ssdp.txt.snap
---
source: crates/pandaspy-discovery/tests/ssdp_golden.rs
expression: "\"not ssdp\""
input_file: fixtures/ssdp/synthetic-not-ssdp.txt
---
not ssdp
