crates/pandaspy-discovery/tests/snapshots/ssdp_golden__every_ssdp_fixture_parses_and_matches_its_snapshot@synthetic-notify-url-location.txt.snap
---
source: crates/pandaspy-discovery/tests/ssdp_golden.rs
expression: "serde_json::json!({ \"announcement\": announcement, \"printer\": printer, })"
input_file: fixtures/ssdp/synthetic-notify-url-location.txt
---
{
  "announcement": {
    "headers": {
      "cache-control": "max-age=1800",
      "devbind.bambu.com": "free",
      "devconnect.bambu.com": "lan",
      "devmodel.bambu.com": "C11",
      "devname.bambu.com": "REDACTED-NAME",
      "devsignal.bambu.com": "-62",
      "host": "239.255.255.250:2021",
      "location": "http://192.168.0.7:8883/desc",
      "nt": "urn:bambulab-com:device:3dprinter:1",
      "server": "UPnP/1.0",
      "usn": "01S00A000000000"
    },
    "kind": "Notify"
  },
  "printer": {
    "address": "192.168.0.7",
    "bind_state": "free",
    "connect_mode": "lan",
    "model": "C11",
    "name": "REDACTED-NAME",
    "serial": "01S00A000000000",
    "signal_dbm": -62,
    "source": "Ssdp"
  }
}
