crates/pandaspy-discovery/tests/snapshots/ssdp_golden__every_ssdp_fixture_parses_and_matches_its_snapshot@synthetic-notify-x1c.txt.snap
---
source: crates/pandaspy-discovery/tests/ssdp_golden.rs
expression: "serde_json::json!({ \"announcement\": announcement, \"printer\": printer, })"
input_file: fixtures/ssdp/synthetic-notify-x1c.txt
---
{
  "announcement": {
    "headers": {
      "cache-control": "max-age=1800",
      "devbind.bambu.com": "free",
      "devconnect.bambu.com": "lan",
      "devmodel.bambu.com": "3DPrinter-X1-Carbon",
      "devname.bambu.com": "REDACTED-NAME",
      "devsignal.bambu.com": "-44",
      "host": "239.255.255.250:2021",
      "location": "192.168.0.2",
      "nt": "urn:bambulab-com:device:3dprinter:1",
      "server": "UPnP/1.0",
      "usn": "00M09A000000000"
    },
    "kind": "Notify"
  },
  "printer": {
    "address": "192.168.0.2",
    "bind_state": "free",
    "connect_mode": "lan",
    "model": "BL-P001",
    "name": "REDACTED-NAME",
    "serial": "00M09A000000000",
    "signal_dbm": -44,
    "source": "Ssdp"
  }
}
